<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">کالری‌متر</string>
    <string name="settings">تنظیمات</string>
    <string name="history_tab_title">سابقه</string>
    <string name="analysis_tab_title">تحلیل</string>
    <string name="title_activity_profile">اطلاعات شخصی</string>
    <string name="gender">جنسیت:</string>
    <string name="date_of_birth">تاریخ تولد:</string>
    <string name="height">قد:</string>
    <string name="weight">وزن:</string>
    <string name="kg">کیلوگرم</string>
    <string name="cm">سانتی‌متر</string>
    <string name="cal">کالری</string>
    <string name="bmi">BMI:</string>

    <!-- https://en.wikipedia.org/wiki/Body_mass_index#Categories -->
    <string name="bmi_1">You\'re not OK1.</string>
    <string name="bmi_2">You\'re not OK2.</string>
    <string name="bmi_3">You\'re not OK3.</string>
    <string name="bmi_4">You\'re OK.</string>
    <string name="bmi_5">You\'re not OK5.</string>
    <string name="bmi_6">You\'re not OK6.</string>
    <string name="bmi_7">You\'re not OK7.</string>
    <string name="bmi_8">You\'re not OK8.</string>
    <string name="bmi_test_number">19.2</string>
    <string name="manual">خودم</string>
    <string name="recommended">پیشنهاد سیستم</string>
    <string name="daily_target">هدف روزانه:</string>
    <string name="diet_goal">رژیم برای:</string>
    <string name="lifestyle">سبک زندگی:</string>
    <string name="action_set_calorie_goal">تنظیم مصرف روزانه</string>
    <string name="done">خب</string>
    <string name="cancel">برگرد</string>
    <string name="save">ذخیره</string>
    <string name="edit">ویرایش</string>
    <string name="sedantry">کم‌تحرک</string>
    <string name="lightly_active">کمی فعال</string>
    <string name="moderately_active">نیمه‌فعال</string>
    <string name="very_active">خیلی فعال</string>
    <string name="extra_active">خیلی خیلی فعال</string>
    <string name="male">مرد</string>
    <string name="female">زن</string>
    <string name="lose_weight">کاهش وزن</string>
    <string name="maintain_weight">حفظ وزن</string>
    <string name="gain_weight">افزایش وزن</string>
    <string name="log_off">پاک‌کردن اطلاعات</string>
    <string name="profile">اطلاعات شخصی</string>
    <string name="test_number">۱۲۳۴</string>
    <string name="test_date">۱۲/۱۲/۹۴</string>
    <string name="remaining_bold"><b>مانده</b></string>
    <string name="target_bold"><b>هدف</b></string>
    <string name="consumed_bold"><b>رفته</b></string>
    <string name="next_day">روز بعد</string>
    <string name="previous_day">روز قبل</string>
    <string name="pick_date">انتخاب تاریخ</string>
    <string name="new_food">مصرف جدید</string>
    <string name="test_text">تست</string>
    <string name="breakfast">صبحانه</string>
    <string name="lunch">ناهار</string>
    <string name="dinner">شام</string>
    <string name="snack">میان‌وعده</string>
    <string name="error_enter_daily_target">مصرف روزانه را مشخص کنید</string>
    <string name="error_enter_date_of_birth">تاریخ تولد را وارد کنید</string>
    <string name="error_enter_height">قد را وارد کنید</string>
    <string name="error_enter_weight">وزن را وارد کنید</string>
    <string name="error_enter_amount">مقدار را وارد کنید</string>
    <string name="search_title">جست‌وجوی خوراکی&#8230;</string>
    <string name="action_search">جست‌وجو</string>
    <string name="amount">مقدار:</string>
    <string name="meal">وعده:</string>
    <string name="add_new_food">تعریف غذای جدید</string>
    <string name="create_new_food">خب</string>
    <string name="name">اسم:</string>
    <string name="serving_size">مقدار:</string>
    <string name="serving_unit">واحد اندازه‌گیری:</string>
    <string name="energy">انرژی:</string>
    <string name="add_ingridient">اضافه‌کردن ترکیبات</string>
    <string name="ingridient_dialog_message">اضافه کردن ترکیبات</string>
    <string name="error_food_exists">این خوراکی با این واحد اندازه‌گیری موجود است</string>
    <string name="error_enter_food_name">اسم خوراکی را وارد کنید</string>
    <string name="error_enter_serving_amount">مقدار را وارد کنید</string>
    <string name="error_enter_serving_unit">واحد اندازه‌گیری را وارد کنید</string>
    <string name="error_enter_energy">انرژی خوراکی را وارد کنید</string>
    <string name="delete_consumption_dialog_message">پاک کنم؟</string>
    <string name="yes">بله</string>
    <string name="no">نه</string>
    <string name="nothing_was_found">چیزی پیدا نشد!</string>
    <string name="click_here_to">اینجا رو بزن تا</string>
    <string name="add_this_food">رو اضافه کنی</string>
    <string name="good_job">امروز خوب بود</string>
    <string name="too_high">امروز پرخوری کردی</string>
    <string name="too_low">امروز کم‌کاری کردی</string>
    <string name="target"><b>هدف:</b></string>
    <string name="consumed"><b>مصرف:</b></string>
    
	<string-array name="lifestyle_list">
        <item>@string/sedantry</item>
        <item>@string/lightly_active</item>
        <item>@string/moderately_active</item>
        <item>@string/very_active</item>
        <item>@string/extra_active</item>
    </string-array>
    <string-array name="gender_list">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>
    <string-array name="diet_goal_list">
        <item>@string/lose_weight</item>
        <item>@string/maintain_weight</item>
        <item>@string/gain_weight</item>
    </string-array>
    <string-array name="bmi_explanations">
        <item>@string/bmi_1</item>
        <item>@string/bmi_2</item>
        <item>@string/bmi_3</item>
        <item>@string/bmi_4</item>
        <item>@string/bmi_5</item>
        <item>@string/bmi_6</item>
        <item>@string/bmi_7</item>
        <item>@string/bmi_8</item>
    </string-array>
    <string-array name="navigation_menu_items">
        <item>@string/profile</item>
        <item>@string/log_off</item>
    </string-array>
    <string-array name="meal_items">
        <item>@string/breakfast</item>
        <item>@string/lunch</item>
        <item>@string/dinner</item>
        <item>@string/snack</item>
    </string-array>

    <string name="title_activity_target_calculator">تنظیم مصرف روزانه</string>
    <string name="title_activity_main">کالری‌متر</string>
    <string name="action_settings">تنظیمات</string>
    <string name="title_activity_main_activity1">MainActivity1</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_new_consumption">مصرف جدید</string>
    <string name="title_activity_food_detail">خوراکی</string>
    <string name="title_activity_new_food">تعریف خوراکی جدید</string>

</resources>
