<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@color/action_bar_color" >

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search_title"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_search"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/action_bar_title_color"
            android:textColorHint="@color/hint_color" >

            <requestFocus />
        </EditText>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_action_search"
            android:contentDescription="@null" />

    </LinearLayout>

    <TextView
        android:id="@+id/nothing_was_found_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nothing_was_found"
        android:visibility="gone"
        android:padding="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/new_food_search_results_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:headerDividersEnabled="true"
        android:footerDividersEnabled="true"
        android:divider="@drawable/history_divider_with_margin"
        android:dividerHeight="0dp" >
    </ListView>

</LinearLayout>
